--- a/app/src/main/res/layout/item_custom_row.xml
+++ b/app/src/main/res/layout/item_custom_row.xml
@@ -9,32 +9,57 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view_item"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="100dp"
         android:layout_margin="5dp"
         android:padding="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
+            android:layout_height="match_parent"
             android:orientation="horizontal"
             tools:ignore="UseCompoundDrawables">
 
             <ImageView
-                android:layout_width="92dp"
-                android:layout_height="wrap_content"
+                android:id="@+id/iv_thumbnail"
+                android:layout_width="43dp"
+                android:layout_height="37dp"
                 android:contentDescription="@string/app_name"
                 android:src="@mipmap/ic_launcher" />
+            <TextView
+                android:id="@+id/tv_cat"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:textSize="10sp"
+                android:textStyle="bold"
+                tools:text="Cat" />
 
             <TextView
                 android:id="@+id/tv_item_name"
-                android:layout_width="match_parent"
+                android:layout_width="53dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
                 android:textColor="@android:color/black"
-                android:textSize="18sp"
-                android:textStyle="bold"
+                android:textSize="10sp"
                 tools:text="Item" />
+
+            <TextView
+                android:id="@+id/tv_url"
+                android:layout_width="142dp"
+                android:layout_height="match_parent"
+                android:textColor="@android:color/black"
+                android:textSize="10sp"
+                tools:text="date" />
+
+            <TextView
+                android:id="@+id/tv_date"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/black"
+                android:textSize="10sp"
+                tools:text="date" />
+
+
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
